adjusted nav bar still need to work on social media nav.

--- a/index.html
+++ b/index.html
@@ -5,36 +5,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 
 <body>
 
     <div class="title-page">
-        <nav>
-            <div class="fallhard">FALLHARD UNION</div>
+
+        <nav id="navigation">
 
             <div class="topnav">
-                <a class="active" href="#home">Home</a>
+                <a href="#home">Home</a>
                 <a href="#news">News</a>
+                <a href="#merch">Merch</a>
                 <a href="#contact">Contact</a>
                 <a href="#about">About</a>
             </div>
+                <div class="socialnav">
+                    <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://snapchat.com"><i class="fa-brands fa-snapchat"></i></a>
+                    <a href="https://spotify.com"><i class="fa-brands fa-spotify"></i></a>
+                    <a href="https://soundcloud.com"><i class="fa-brands fa-soundcloud"></i></a>
+                </div>
+            
+            <div class="fallhard">FALLHARD UNION</div>
 
+    
         </nav>
 
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, recusandae voluptatum facere minima maiores
-            excepturi molestiae odio possimus porro adipisci perferendis, ipsam praesentium corporis id! Eaque assumenda
-            cum doloremque corporis?</p>
-
+        <div>
+            <p class="about">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, recusandae voluptatum facere
+                minima maiores
+                excepturi molestiae odio possimus porro adipisci perferendis, ipsam praesentium corporis id! Eaque
+                assumenda
+                cum doloremque corporis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum recusandae
+                doloremque tempore dignissimos laudantium perspiciatis mollitia, saepe in fuga necessitatibus magni
+                repellendus rerum non esse cupiditate ad debitis alias sint. Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Autem in tenetur tempora, dicta pariatur quas fugiat. Ea quidem, nobis ducimus
+                deleniti
+                enim tenetur labore eos cumque fuga totam voluptate repellat.</p>
+        </div>
     </div>
 
 </body>
-<script src=""></script>
+<script src="index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
 
 </html>
-<index class="js"></index>
