--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <body>
     <div>
+
         <nav>
             <div class="navbar">
 
@@ -82,6 +83,10 @@
                 allowfullscreen></iframe>
 
         </div>
+            <h2>
+                Shop
+            </h2>
+
 
     </div>
 
