working on resizing page with js.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div>
 
         <nav>
+            <img class="ham-menu" src="hammenu.png" alt="" srcset="">
             <div class="navbar">
 
                 <h1 id="fallhard">fallhard union</h1>
